fail with 'dhl' as 2nd element

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+ - failed Futures now have a 'dhl' string as second element, as
+   recommended by PEVANS
 
 0.01_2    2014-06-05 15:14:10+01:00 Europe/London
  - correctly handle connection failures
