I had forgotten to actually install the share dir

--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+ - install the share dir with the XML schema files
 
 0.01_4    2014-06-10 10:43:55+01:00 Europe/London
  - do not swallow non-http exceptions
