--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 {{$NEXT}}
+ - product_code is no longer required (it was not used)
+ [Incompatible changes]
+ - if you pass product_code, it will now be used in the request
 
 1.0.0     2014-06-25 11:21:06+01:00 Europe/London
  - first non-dev release
