'route request' call

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+ - route request call
+ - added optional message reference to all calls
 
 1.1.1     2014-07-29 11:14:40+01:00 Europe/London
  - use SingleEncoding (thanks sergeyromanov)
